package src.classes;

import src.abs.Creature;
import src.abs.Thing;

public class Basket extends Thing {

    public Basket(Point pos, Creature owner, String name) {
        super(pos, owner, name);
    }

}
