package src.classes;

import src.abs.Creature;
import src.abs.Thing;

public class Chair extends Thing {

    public Chair(Point pos, Creature owner, String name) {
        super(pos, owner, name);
    }

}
