package src.classes;

import src.abs.Creature;
import src.abs.Thing;

public class Cone extends Thing {

    public Cone(Point pos, Creature owner, String name) {
        super(pos, owner, name);
    }

}
