package src.interfaces;

import src.enums.Properties;

public interface Convertable {
    public void convert(Properties[] newProperties);
}
