package src.interfaces;

public interface Energed {
    public void relax(int duration);

    public void work(int duration);

    public boolean isTired();
}
