package src.interfaces;

import src.abs.Creature;

public interface Explainable {
    public String explain(Creature creature, String info);
}
