package src.interfaces;

import src.abs.*;

public interface Flipable {
    public String flip(Thing thing, int quantity);
}
