package src.interfaces;

import src.abs.Positioned;

public interface Pushable {
    public void push(Positioned obj);
}
