package src.interfaces;

import src.enums.*;

public interface Swallowable {
    public String swallow(Liquids liquid);
}
