package src.interfaces;

import src.abs.*;

public interface Throwable {
    public void throwing(Thing thing, Creature creature);
}
